-fixed form overflowing on resize

--- a/style.css
+++ b/style.css
@@ -145,8 +145,9 @@ form {
     display: flex;
     flex-wrap: wrap;
     flex: 1, 0, auto;
-    height: 33%;
+    height: clamp(33%);
     padding-left: 40px;
+    padding-bottom: 20px;
 }
 
 .formheader {
@@ -162,7 +163,7 @@ form > div {
 footer {
     position: relative;
     top: 30px;
-    height: 33%;
+    height: clamp(33%);
     padding-left: 40px;
     flex: 0, 1, auto
 }
